Name: pipes-frp
Version: 1.0.1
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2013 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/secret-adventure/pipes-frp/issues
Synopsis: FRP for the pipes ecosystem
Description: FRP done right.
Category: Control, Pipes, Proxies, FRP
Tested-With: GHC ==7.4.1
Source-Repository head
    Type: git
    Location: https://github.com/secret-adventure/pipes-frp

Library
    Build-Depends:
        base              >= 4       && < 5  ,
        async             >= 2.0.0   && < 2.1,
        pipes             >= 3.2.0   && < 3.3,
        pipes-concurrency >= 1.0.0   && < 1.1,
        stm               >= 2.4.0   && < 2.5,
        transformers      >= 0.2.0.0 && < 0.4
    Exposed-Modules: Control.Proxy.FRP
    GHC-Options: -O2
